# apps/backend/controllers/user/user.req.go
@@ -12,3 +12,8 @@ type UpdateUserRequest struct {
     Email string `json:"email" binding:"omitempty,email"`
     Password  string `json:"password" binding:"required,min=8,max=100"`
 }
+
+type LoginRequest struct {
+    Email    string `json:"email"`
+    Password string `json:"password"`
+}
